recursion.logo.lessons.recursion.logo.koch.PentaKoch.scala.error
PentaKoch:1: error: Missing closing brace `}' assumed here
def pentaKoch(levels:Int, length:Double) {
^PentaKoch:1: error: expected class or object definition
def pentaKoch(levels:Int, length:Double) {
^